--- a/index.html
+++ b/index.html
@@ -1,47 +1,46 @@
-
+<!DOCTYPE html>
 <html>
-    <head>
-       <title>My Selfie App</title>
- <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+<style>
+body{
+	background-image: url("racing.gif");
+    background-position: center;
+    background-size: cover;
+}
+#myCanvas
+{
+    margin-top: 30px;
+	border-width:10px;
+	background-color: white; 
+	border-style:ridge;
+}
+
+h1,h4
+{
+	color: white !important;
+}
+</style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-<script scr="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
-<link href="style.css" rel="stylesheet">
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
-
+	<title>Car Racing</title>
 </head>
- 
-<body>
-    <div class="container">
-    <center>
-        <a href="" id="link" download="myselfie.png"></a>
-        <h1>Voice Selfie App 
-        <img id="logo_img" src="selfie.jpeg">
-        </h1>
-        <hr>
-        <h4 style="color:red;">Please press allow as soon as popup comes. After you give a voice command</h4>
-        
-        <div class="form-group">
-        <h3>Say "take my selfie"</h3>
-        <label>Your voice output : </label>
-        <textarea class="form-control" id="textbox" readonly="true"></textarea>
-        </div>
+<body onload="add();">
 
-        <button class="btn btn-primary" onclick="start()">Start</button>
-        <p>Press the Start button</p>
+<center>
+<h1>Car Racing</h1>
+<h1>Game Status : <span id="game_status"></span></h1>
+	<canvas id="myCanvas" width="800" height="600">
+	</canvas>
+<h4>
+	<b class="text-danger">NOTE : </b> IF THE CARS ARE NOT VISIBLE PRESS ANY ARROW KEY
+</h4>
 
-        <label>Your webcam : </label>
-        <div id="camera"></div>
-        
-        <br>
-
-        <label>Your selife Will Display Here: </label>
-        <div id="result" ></div>
-    </center>
-    </div>
-
-    <script src="main.js"></script>
+</center>
 </body>
+
+<script src="C91_Student_Template.js" type="text/javascript"></script>
+
 </html>
